test/spec_vectors/i32/fail/module_6.wat
(module (func $type-unary-operand-empty-in-br (i32.const 0) (block (br 0 (i32.eqz)) (drop))))